<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity"
    android:id="@+id/relLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/product_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/productName"
            android:textColorHint="@color/textColorHint"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/productNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/product_price_layout"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_name_layout"
            android:hint="@string/productPrice"
            android:textColorHint="@color/textColorHint"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/productPriceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/quantityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productQuantity"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:padding="5dp"
            android:textSize="15sp"
            android:layout_below="@+id/product_price_layout"/>

        <LinearLayout
            android:id="@+id/counterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/quantityText">

            <TextView
                android:id="@+id/subQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtract"
                android:textStyle="bold"
                android:padding="5dp"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/product_quantity"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/initialQuantity"
                android:textStyle="bold"
                android:textAlignment="center"
                android:padding="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="40sp"/>

            <TextView
                android:id="@+id/addQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textStyle="bold"
                android:padding="5dp"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalPrice"
            android:textStyle="bold"
            android:padding="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="15sp"
            android:layout_below="@+id/counterLayout"/>

        <TextView
            android:id="@+id/rupees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rupees"
            android:textStyle="bold"
            android:padding="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:layout_below="@+id/totalPrice"/>

        <TextView
            android:id="@+id/product_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initialPrice"
            android:textStyle="bold"
            android:padding="5dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            android:layout_below="@id/totalPrice"
            android:layout_toEndOf="@+id/rupees"/>

    </RelativeLayout>

    <Button
        android:id="@+id/addProductButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@drawable/styled_button"
        android:textSize="20sp"
        android:text="@string/addProduct"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>