<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent">

                <TextView
                    android:id="@+id/p_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/pID"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/product_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:layout_below="@+id/p_id"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/p_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/pName"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:layout_below="@+id/product_id"/>

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:layout_below="@+id/p_name"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/p_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/pQuantity"
                    android:layout_below="@+id/product_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/product_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:layout_below="@+id/p_quantity"/>

                <TextView
                    android:id="@+id/p_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/pPrice"
                    android:layout_below="@+id/product_quantity"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/rupees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="20sp"
                    android:text="@string/rupees"
                    android:layout_below="@+id/p_price"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:padding="5dp"/>


                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:padding="5dp"
                    android:layout_toEndOf="@id/rupees"
                    android:layout_below="@+id/p_price"/>

            </RelativeLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</RelativeLayout>